<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_widget_style"
                android:textSize="16sp"
                android:textStyle="bold" />

        <RadioGroup
                android:id="@+id/radio_group_profile_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

            <RadioButton
                    android:id="@+id/radio_profile_style_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small_compact_chip" />

            <RadioButton
                    android:id="@+id/radio_profile_style_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large_title_buttons" />
        </RadioGroup>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

        <Switch
                android:id="@+id/switch_profile_show_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_hint_subtitle_on_large_widget"
                android:layout_marginTop="8dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
                android:id="@+id/button_profile_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_profile_widget"
                android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
